# aoc2018

./: .gitignore  aoc2018.cabal
app/: Main.hs
src/Day1/: Part1.hs  Part2.hs
src/Day2/: Part1.hs  Part2.hs
test/Day1/: Part1Spec.hs  Part2Spec.hs
test/Day2/: Part1Spec.hs  Part2Spec.hs
