name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/martstol/aoc2018#readme
author:              Martin Stølen
maintainer:          m.stolen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1.Part1
                     , Day1.Part2
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
  default-language:    Haskell2010

executable aoc2018
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , aoc2018
  default-language:    Haskell2010

test-suite aoc2018-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc2018
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martstol/aoc2018
